--- a/CSS/Accueil.css
+++ b/CSS/Accueil.css
@@ -1,4 +1,4 @@
-@import "Accueil.sass";   
+@import "/Users/gaelletakforyan/Desktop/Openclassrooms/Projet-3/CSS/Accueil.scss";
 
 /* Principals elements of the page */
 body
@@ -18,22 +18,87 @@ body
     flex-direction: row-reverse;
     align-items: center;
     justify-content: center;
-    background-color: #F2F2F2;
+    background-color: #e3e1e1;
     margin-top: 0.5em;
 }
 .input
 {
-    background-color: #F2F2F2;
+    background-color: #e3e1e1;
     border: none;
     font-size: 0.85em;
     padding: 10px 0px 10px 80px;
 }
-
 .icon
 {
     width: 15px;
     height: 15px;
-    position: relative;
     margin-right: -4.5em;
     margin-left: 4em;
 }
+.purpose
+{
+    background-color: #f5f6f7;
+    padding-top: 2em;
+    padding-bottom: 5em;
+}
+.purpose h2
+{
+    font-size: 1.3em;
+    text-align: center;
+}
+.purpose p
+{
+    text-align: center;
+    font-weight: 100;
+    font-size: 0.95em;
+}
+.explore
+{
+    border-radius: 3em;  
+    position: absolute;
+    left: 27%;
+    margin: 0;
+    font-size: 0.75em;
+    color: white;
+    padding: 10px 15px 10px 15px;
+    background: linear-gradient(to bottom right, #FF79DA, #9356DC);
+    border: none;
+}
+nav h2, section h2
+{
+    font-size: 1.3em;
+    margin-left: 1em ;
+}
+.select, .compose, .store
+{
+    display: flex;
+    flex-direction: row;
+    align-items:center;
+    margin-top: 2em;
+    padding-right: 1em;
+}
+.select-img, .compose-img, .store-img
+{
+    width: 15px;
+    height: 15px;
+    position: absolute;
+    margin-left: 4em;
+}
+.select-p, .compose-p, .store-p
+{
+    background-color: #f5f6f7;
+    border: none;
+    font-size: 0.8em;
+    padding: 20px 0px 20px 70px;
+    border-radius: 1.5em; 
+    margin-left: 2.5em;
+    width: 100%;
+}
+.first, .second, .third
+{
+    width: 24px;
+    height: 24px;
+    position: absolute;
+    margin-left: 1em;
+}
+/* Section */
