--- a/CSS/Accueil.css
+++ b/CSS/Accueil.css
@@ -4,8 +4,7 @@
 body
 {
     font-family: 'Roboto', sans-serif;
-    margin-left: -0.5%;
-    margin-right: -0.5%;
+    margin-left: 0%;
 }
 /* Header */
 .logo
@@ -18,28 +17,32 @@ body
     flex-direction: row-reverse;
     align-items: center;
     justify-content: center;
-    background-color: #e3e1e1;
-    margin-top: 0.5em;
+    margin-right: -0.5em;
 }
 .input
 {
-    background-color: #e3e1e1;
+    
+    background-color: rgb(234 234 234);
     border: none;
-    font-size: 0.85em;
-    padding: 10px 0px 10px 80px;
+    font-size: 0.95em;
+    padding: 10px 0px 10px 130px;
+    width: 102.5%;
+    margin-top: 1em;
 }
 .icon
 {
     width: 15px;
     height: 15px;
-    margin-right: -4.5em;
-    margin-left: 4em;
+    position: absolute;
+    left: 25%;
+    top: 10%;
 }
 .purpose
 {
-    background-color: #f5f6f7;
+    background-color: rgb(246 246 246);
     padding-top: 2em;
     padding-bottom: 5em;
+    width: 102.2%;
 }
 .purpose h2
 {
@@ -86,7 +89,7 @@ nav h2, section h2
 }
 .select-p, .compose-p, .store-p
 {
-    background-color: #f5f6f7;
+    background-color: rgb(246 246 246);
     border: none;
     font-size: 0.8em;
     padding: 20px 0px 20px 70px;
@@ -102,3 +105,115 @@ nav h2, section h2
     margin-left: 1em;
 }
 /* Section */
+section h2
+{
+    padding-top: 2em;
+}
+
+section
+{
+    margin-top: 3em;
+    padding-bottom: 3em;
+    background-color: rgb(246 246 246);
+    height: auto;
+    width: 102.2%;
+}
+.restaurant1-link, .restaurant2-link, .restaurant3-link, .restaurant4-link
+{
+    color: black;
+    text-decoration: none;
+}
+.menilmontant, .charonne, .cite-rouge, .folie-mericourt
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    box-shadow: 0px 2px 5px #F2F2F2;
+    border-color: #F2F2F2;
+    width: 90%;
+    height: 275px;
+    margin-left: 1em;
+    border-radius: 0.5em;
+}
+.menilmontant-img, .charonne-img, .cite-rouge-img, .folie-mericourt-img
+{
+    width: 100%;
+    height: 200px;
+    border-top-left-radius: 0.5em;
+    border-top-right-radius: 0.5em;
+    object-fit: cover;
+}
+.menilmontant-title, .charonne-title, .cite-rouge-title, .folie-mericourt-title
+{
+    position: absolute;
+    left: 8%;
+    font-size: 0.95em;
+    margin-top: 14em;
+}
+.menilmontant-place, .charonne-place, .cite-rouge-place, .folie-mericourt-place
+{
+    position: absolute;
+    left: 8%;
+    font-weight: 100;
+    font-size: 0.85em;
+    margin-top: 17.5em;
+}
+.menilmontant-new, .charonne-new, .cite-rouge-new, .folie-mericourt-new
+{
+    position: absolute;
+    right: 10%;
+    width: 60px;
+    height: 30px;
+    margin-top: 0.5em;
+}
+.menilmontant-heart, .charonne-heart, .cite-rouge-heart, .folie-mericourt-heart
+{
+    position: absolute;
+    right: 10%;
+    width: 20px;
+    height: 24px;
+    margin-top: 13em;
+}
+.charonne, .cite-rouge, .folie-mericourt
+{
+    margin-top: 2em;
+}
+/* Footer */
+footer
+{
+    background-color: rgb( 53 53 53);
+    margin-top: -1em;
+    padding-top: 0.5em;
+    margin-bottom: -1.5em;
+    height: 200px;
+    width: 102.2%;
+}
+footer .title
+{
+    font-family: 'Shrikhand', cursive;
+    margin-left: 1.5em;
+    font-size: 1.15em;
+    color: white;
+}
+.ustensils-p, .partner-p, .legal, .contact-link
+{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    text-decoration: none;
+    font-size: 0.80em;
+    margin-left: 3em;
+    color: white;
+}
+.ustensils, .partner
+{
+    width: 12px;
+    height: 12px;
+    position: absolute;
+    margin-left: 1em;
+}
+.partner
+{
+    margin-top: 2em;
+}
