--- a/Sass/Accueil.scss
+++ b/Sass/Accueil.scss
@@ -98,10 +98,6 @@ body {
     opacity: 0;
   }
   
-  .select-img2:hover, .compose-img2:hover, .store-img2:hover {
-    opacity: 1;
-  }
-  
   .select-p, .compose-p, .store-p {
     background-color: $backgroundmain;
     border: none;
@@ -116,7 +112,11 @@ body {
   .select-p:hover, .compose-p:hover, .store-p:hover {
     background: $backgroundhover;
   }
-  
+
+  .select-p:hover +.select-img2, .compose-p:hover + .compose-img2, .store-p:hover + .store-img2{
+    opacity: 1;
+  }
+
   .first, .second, .third {
     width: 24px;
     height: 24px;
