--- a/Accueil.css
+++ b/Accueil.css
@@ -1,3 +1,55 @@
+/*Loader*/
+
+.overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  animation: bye 5s;
+  opacity: 1;
+}
+.spinner {
+  margin-top:50%;
+  margin-left: 37.5%;
+  width: 75px;
+  height: 75px;
+  border-width: 2px;
+  border-color: #9356DC;
+  border-top-color: #fff;
+  animation: spin 1s infinite linear;
+  border-radius: 100%;
+  border-style: solid;
+}
+.bloc-page{
+  animation: bloc-load 1s ease-in 2s;
+  animation-fill-mode: forwards;
+  transform: translateY(-20px);
+  opacity: 0;
+}
+
+@keyframes spin {
+  100% {
+      transform: rotate(360deg);
+  }
+}
+@keyframes bye{
+
+  100%{
+      opacity: 0;
+  }
+}
+@keyframes bloc-load{
+  0%{
+      transform: translateY(-20px);
+      opacity: 0;
+  }
+  100%{
+      transform: translateY(0px);
+      opacity: 1;
+      background-color: #fff;
+  }
+}
 /* Principals elements of the page */
 body {
   font-family: "Roboto", sans-serif;
@@ -7,6 +59,7 @@ body {
 /* Header */
 .logo {
   text-align: center;
+  margin-top: 1em;
 }
 
 .map {
@@ -32,7 +85,7 @@ body {
   height: 15px;
   position: absolute;
   left: 25%;
-  top: 10%;
+  top: 3%;
 }
 
 .purpose {
@@ -92,7 +145,6 @@ nav h2, section h2 {
   margin-left: 4em;
   opacity: 0;
 }
-
 .select-p, .compose-p, .store-p {
   background-color: #f6f6f6;
   border: none;
@@ -103,15 +155,12 @@ nav h2, section h2 {
   margin-left: 2.5em;
   width: 100%;
 }
-
 .select-p:hover, .compose-p:hover, .store-p:hover {
   background: #f5edff;
 }
-
 .select-p:hover + .select-img2, .compose-p:hover + .compose-img2, .store-p:hover + .store-img2 {
   opacity: 1;
 }
-
 .first, .second, .third {
   width: 24px;
   height: 24px;
@@ -197,7 +246,6 @@ section {
   margin-top: 13.2em;
   opacity: 0;
 }
-
 .menilmontant-heart2:hover, .charonne-heart2:hover, .cite-rouge-heart2:hover, .folie-mericourt-heart2:hover {
   opacity: 1;
 }
