--- a/index.css
+++ b/index.css
@@ -1,10 +1,57 @@
-$backgroundcity: #eaeaea;
-$backgroundmain: #f6f6f6;
-$backgroundhover: #f5edff;
-$backgroundfooter: #353535;
+/*Loader*/
 
-/* Principals elements of the page */
-body {
+.overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    animation: bye 5s;
+    opacity: 1;
+  }
+  .spinner {
+    margin-top:50%;
+    margin-left: 37.5%;
+    width: 75px;
+    height: 75px;
+    border-width: 2px;
+    border-color: #9356DC;
+    border-top-color: #fff;
+    animation: spin 1s infinite linear;
+    border-radius: 100%;
+    border-style: solid;
+  }
+  .bloc-page{
+    animation: bloc-load 1s ease-in 2s;
+    animation-fill-mode: forwards;
+    transform: translateY(-20px);
+    opacity: 0;
+  }
+  
+  @keyframes spin {
+    100% {
+        transform: rotate(360deg);
+    }
+  }
+  @keyframes bye{
+  
+    100%{
+        opacity: 0;
+    }
+  }
+  @keyframes bloc-load{
+    0%{
+        transform: translateY(-20px);
+        opacity: 0;
+    }
+    100%{
+        transform: translateY(0px);
+        opacity: 1;
+        background-color: #fff;
+    }
+  }
+  /* Principals elements of the page */
+  body {
     font-family: "Roboto", sans-serif;
     margin-left: 0%;
   }
@@ -12,6 +59,7 @@ body {
   /* Header */
   .logo {
     text-align: center;
+    margin-top: 1em;
   }
   
   .map {
@@ -23,7 +71,7 @@ body {
   }
   
   .input {
-    background-color: $backgroundcity;
+    background-color: #eaeaea;
     border: none;
     font-size: 0.95em;
     color: black;
@@ -37,11 +85,11 @@ body {
     height: 15px;
     position: absolute;
     left: 25%;
-    top: 10%;
+    top: 3%;
   }
   
   .purpose {
-    background-color: $backgroundmain;
+    background-color: #f6f6f6;
     padding-top: 2em;
     padding-bottom: 5em;
     width: 102.2%;
@@ -97,9 +145,8 @@ body {
     margin-left: 4em;
     opacity: 0;
   }
-  
   .select-p, .compose-p, .store-p {
-    background-color: $backgroundmain;
+    background-color: #f6f6f6;
     border: none;
     color: black;
     font-size: 0.8em;
@@ -108,15 +155,12 @@ body {
     margin-left: 2.5em;
     width: 100%;
   }
-  
   .select-p:hover, .compose-p:hover, .store-p:hover {
-    background: $backgroundhover;
+    background: #f5edff;
   }
-
-  .select-p:hover +.select-img2, .compose-p:hover + .compose-img2, .store-p:hover + .store-img2{
+  .select-p:hover + .select-img2, .compose-p:hover + .compose-img2, .store-p:hover + .store-img2 {
     opacity: 1;
   }
-
   .first, .second, .third {
     width: 24px;
     height: 24px;
@@ -132,7 +176,7 @@ body {
   section {
     margin-top: 3em;
     padding-bottom: 3em;
-    background-color: $backgroundmain;
+    background-color: #f6f6f6;
     height: auto;
     width: 102.2%;
   }
@@ -202,7 +246,6 @@ body {
     margin-top: 13.2em;
     opacity: 0;
   }
-  
   .menilmontant-heart2:hover, .charonne-heart2:hover, .cite-rouge-heart2:hover, .folie-mericourt-heart2:hover {
     opacity: 1;
   }
@@ -213,7 +256,7 @@ body {
   
   /* Footer */
   footer {
-    background-color: $backgroundfooter;
+    background-color: #353535;
     margin-top: -1em;
     padding-top: 0.5em;
     margin-bottom: -1.5em;
@@ -248,3 +291,4 @@ body {
   .partner {
     margin-top: 2em;
   }
+  
