--- a/menu1/sass/style1.scss
+++ b/menu1/sass/style1.scss
@@ -31,7 +31,7 @@ body {
 section{
     background-color: #f6f6f6;
     margin-top: -3em;
-    padding-bottom: 8em;
+    padding-bottom: 15em;
     width: 100%;
     border-top-left-radius: 2em;
     border-top-right-radius: 2em;
@@ -51,8 +51,8 @@ section{
     font-family: "Shrikhand", cursive;
     font-size: 1.25em;
 }
-.starter {
-  .starter-card1, .starter-card2, .starter-card3 {
+.starter, .dishes, .desert {
+  .starter-card1, .starter-card2, .starter-card3, .dish-card1, .dish-card2, .dish-card3, .desert-card1, .desert-card2, .desert-card3  {
         cursor: pointer;
         background-color: white;
         position: relative;
@@ -60,18 +60,17 @@ section{
         box-shadow: 2px 3px 10px rgba(0,0,0,0.1);
         margin: 0em 1em 1.5em 1em;
         display: flex;
-    &:hover .check1, &:hover .check2, &:hover .check3 {
+    &:hover .check {
       width: 25%;
-      > .check-circle1, .check-circle2, .check-circle3 {
+      > .check-circle {
         width: 20px;
         height: 20px;
         opacity: 1;
         animation: rotation 1s linear;
       }
     }
-    
   }
-    .start-choice1, .start-choice2, .start-choice3 {
+    .start-choice1, .start-choice2, .start-choice3, .dish-choice1, .dish-choice2, .dish-choice3, .desert-choice1, .desert-choice2, .desert-choice3 {
         width: 100%;
         padding: 0 10px;
         display: grid;
@@ -103,7 +102,7 @@ section{
     }
 }
 
-.check1, .check2, .check3 {
+.check {
     transition: width 1s linear;
     width: 0;
     right: 0;
@@ -116,7 +115,7 @@ section{
     display: flex;
     justify-content: center;
     align-items: center;
-    .check-circle1, .check-circle2, .check-circle3 {
+    .check-circle {
         opacity: 0;
         z-index: 1;
     }
@@ -144,9 +143,6 @@ section{
     border-bottom: 2px solid #99E2D0;
     padding-bottom: 0.5em;
 }
-.dishes-title, .desert-title{
-    margin-top: 3em;
-}
 .starter{
     animation: starter-load 2s ease-in 300ms;
     animation-fill-mode: forwards;
@@ -165,46 +161,12 @@ section{
     transform: translateY(-20px);
     opacity: 0;
 }
-.start1, .start2, .start3, .dish1, .dish2, .dish3, .desert1, .desert2, .desert3 {
-    background-color: white;
-    box-shadow: 0px 2px 5px #F2F2F2;
-    border-color: #F2F2F2;
-    width: 90%;
-    height: 80px;
-    margin-left: 1em;
-    padding-top: 0.1em;
-    border-radius: 1em;
-}
-.start2, .start3, .dish2, .dish3, .desert1, .desert2, .desert3 {
-    margin-top: 1em;
-}
-.starter1, .starter2, .starter3,.dishes1,.dishes2, .dishes3, .deserts1, .deserts2, .deserts3 {
-    color: black;
-    text-decoration: none;
-}
-.start1-title, .start2-title, .start3-title, .dish1-title, .dish2-title, .dish3-title, .desert1-title, .desert2-title, .desert3-title{
-    margin-left: 1em;
-}
-.start1-detail, .start2-detail, .start3-detail, .dish1-detail, .dish2-detail, .dish3-detail, .desert1-detail, .desert2-detail, .desert3-detail{
-    margin-left: 1em;
-    font-weight:300;
-    font-size: 0.9em;
-    margin-top: -0.5em;
-}
-.start1-flex, .start2-flex, .start3-flex, .dish1-flex, .dish2-flex, .dish3-flex, .desert1-flex, .desert2-flex, .desert3-flex{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-.start1-price, .start2-price, .start3-price, .dish1-price, .dish2-price, .dish3-price, .desert1-price, .desert2-price, .desert3-price{
-    font-size: 0.9em;
-    margin-top: -0.5em;
-    padding-right: 1em;
-}
+
 .order {
     position: absolute;
     left: 30%;
-    margin-top: 4em;
+    margin-top: 2em;
+    margin-bottom: 1em;
     border-radius: 3em;
     text-decoration-line: none; 
     font-size: 0.75em;
@@ -217,7 +179,7 @@ section{
 /* Footer */
 footer {
     background-color: #353535;
-    margin-top: 75em;
+    margin-top: 76em;
     padding-top: 0.5em;
     margin-bottom: -1.5em;
     height: 200px;
