--- a/menu1/style1.css
+++ b/menu1/style1.css
@@ -34,7 +34,7 @@ body {
 section {
   background-color: #f6f6f6;
   margin-top: -3em;
-  padding-bottom: 8em;
+  padding-bottom: 15em;
   width: 100%;
   border-top-left-radius: 2em;
   border-top-right-radius: 2em;
@@ -58,7 +58,7 @@ section {
   font-size: 1.25em;
 }
 
-.starter .starter-card1, .starter .starter-card2, .starter .starter-card3 {
+.starter .starter-card1, .starter .starter-card2, .starter .starter-card3, .starter .dish-card1, .starter .dish-card2, .starter .dish-card3, .starter .desert-card1, .starter .desert-card2, .starter .desert-card3, .dishes .starter-card1, .dishes .starter-card2, .dishes .starter-card3, .dishes .dish-card1, .dishes .dish-card2, .dishes .dish-card3, .dishes .desert-card1, .dishes .desert-card2, .dishes .desert-card3, .desert .starter-card1, .desert .starter-card2, .desert .starter-card3, .desert .dish-card1, .desert .dish-card2, .desert .dish-card3, .desert .desert-card1, .desert .desert-card2, .desert .desert-card3 {
   cursor: pointer;
   background-color: white;
   position: relative;
@@ -67,16 +67,16 @@ section {
   margin: 0em 1em 1.5em 1em;
   display: flex;
 }
-.starter .starter-card1:hover .check1, .starter .starter-card1:hover .check2, .starter .starter-card1:hover .check3, .starter .starter-card2:hover .check1, .starter .starter-card2:hover .check2, .starter .starter-card2:hover .check3, .starter .starter-card3:hover .check1, .starter .starter-card3:hover .check2, .starter .starter-card3:hover .check3 {
+.starter .starter-card1:hover .check, .starter .starter-card2:hover .check, .starter .starter-card3:hover .check, .starter .dish-card1:hover .check, .starter .dish-card2:hover .check, .starter .dish-card3:hover .check, .starter .desert-card1:hover .check, .starter .desert-card2:hover .check, .starter .desert-card3:hover .check, .dishes .starter-card1:hover .check, .dishes .starter-card2:hover .check, .dishes .starter-card3:hover .check, .dishes .dish-card1:hover .check, .dishes .dish-card2:hover .check, .dishes .dish-card3:hover .check, .dishes .desert-card1:hover .check, .dishes .desert-card2:hover .check, .dishes .desert-card3:hover .check, .desert .starter-card1:hover .check, .desert .starter-card2:hover .check, .desert .starter-card3:hover .check, .desert .dish-card1:hover .check, .desert .dish-card2:hover .check, .desert .dish-card3:hover .check, .desert .desert-card1:hover .check, .desert .desert-card2:hover .check, .desert .desert-card3:hover .check {
   width: 25%;
 }
-.starter .starter-card1:hover .check1 > .check-circle1, .starter .starter-card1:hover .check1 .check-circle2, .starter .starter-card1:hover .check1 .check-circle3, .starter .starter-card1:hover .check2 > .check-circle1, .starter .starter-card1:hover .check2 .check-circle2, .starter .starter-card1:hover .check2 .check-circle3, .starter .starter-card1:hover .check3 > .check-circle1, .starter .starter-card1:hover .check3 .check-circle2, .starter .starter-card1:hover .check3 .check-circle3, .starter .starter-card2:hover .check1 > .check-circle1, .starter .starter-card2:hover .check1 .check-circle2, .starter .starter-card2:hover .check1 .check-circle3, .starter .starter-card2:hover .check2 > .check-circle1, .starter .starter-card2:hover .check2 .check-circle2, .starter .starter-card2:hover .check2 .check-circle3, .starter .starter-card2:hover .check3 > .check-circle1, .starter .starter-card2:hover .check3 .check-circle2, .starter .starter-card2:hover .check3 .check-circle3, .starter .starter-card3:hover .check1 > .check-circle1, .starter .starter-card3:hover .check1 .check-circle2, .starter .starter-card3:hover .check1 .check-circle3, .starter .starter-card3:hover .check2 > .check-circle1, .starter .starter-card3:hover .check2 .check-circle2, .starter .starter-card3:hover .check2 .check-circle3, .starter .starter-card3:hover .check3 > .check-circle1, .starter .starter-card3:hover .check3 .check-circle2, .starter .starter-card3:hover .check3 .check-circle3 {
+.starter .starter-card1:hover .check > .check-circle, .starter .starter-card2:hover .check > .check-circle, .starter .starter-card3:hover .check > .check-circle, .starter .dish-card1:hover .check > .check-circle, .starter .dish-card2:hover .check > .check-circle, .starter .dish-card3:hover .check > .check-circle, .starter .desert-card1:hover .check > .check-circle, .starter .desert-card2:hover .check > .check-circle, .starter .desert-card3:hover .check > .check-circle, .dishes .starter-card1:hover .check > .check-circle, .dishes .starter-card2:hover .check > .check-circle, .dishes .starter-card3:hover .check > .check-circle, .dishes .dish-card1:hover .check > .check-circle, .dishes .dish-card2:hover .check > .check-circle, .dishes .dish-card3:hover .check > .check-circle, .dishes .desert-card1:hover .check > .check-circle, .dishes .desert-card2:hover .check > .check-circle, .dishes .desert-card3:hover .check > .check-circle, .desert .starter-card1:hover .check > .check-circle, .desert .starter-card2:hover .check > .check-circle, .desert .starter-card3:hover .check > .check-circle, .desert .dish-card1:hover .check > .check-circle, .desert .dish-card2:hover .check > .check-circle, .desert .dish-card3:hover .check > .check-circle, .desert .desert-card1:hover .check > .check-circle, .desert .desert-card2:hover .check > .check-circle, .desert .desert-card3:hover .check > .check-circle {
   width: 20px;
   height: 20px;
   opacity: 1;
   animation: rotation 1s linear;
 }
-.starter .start-choice1, .starter .start-choice2, .starter .start-choice3 {
+.starter .start-choice1, .starter .start-choice2, .starter .start-choice3, .starter .dish-choice1, .starter .dish-choice2, .starter .dish-choice3, .starter .desert-choice1, .starter .desert-choice2, .starter .desert-choice3, .dishes .start-choice1, .dishes .start-choice2, .dishes .start-choice3, .dishes .dish-choice1, .dishes .dish-choice2, .dishes .dish-choice3, .dishes .desert-choice1, .dishes .desert-choice2, .dishes .desert-choice3, .desert .start-choice1, .desert .start-choice2, .desert .start-choice3, .desert .dish-choice1, .desert .dish-choice2, .desert .dish-choice3, .desert .desert-choice1, .desert .desert-choice2, .desert .desert-choice3 {
   width: 100%;
   padding: 0 10px;
   display: grid;
@@ -84,20 +84,20 @@ section {
   grid-template-columns: auto auto;
   grid-template-areas: "text1 ." "text2 price";
 }
-.starter .start-choice1 p, .starter .start-choice2 p, .starter .start-choice3 p {
+.starter .start-choice1 p, .starter .start-choice2 p, .starter .start-choice3 p, .starter .dish-choice1 p, .starter .dish-choice2 p, .starter .dish-choice3 p, .starter .desert-choice1 p, .starter .desert-choice2 p, .starter .desert-choice3 p, .dishes .start-choice1 p, .dishes .start-choice2 p, .dishes .start-choice3 p, .dishes .dish-choice1 p, .dishes .dish-choice2 p, .dishes .dish-choice3 p, .dishes .desert-choice1 p, .dishes .desert-choice2 p, .dishes .desert-choice3 p, .desert .start-choice1 p, .desert .start-choice2 p, .desert .start-choice3 p, .desert .dish-choice1 p, .desert .dish-choice2 p, .desert .dish-choice3 p, .desert .desert-choice1 p, .desert .desert-choice2 p, .desert .desert-choice3 p {
   display: block;
 }
-.starter .start-choice1 p:nth-child(1), .starter .start-choice2 p:nth-child(1), .starter .start-choice3 p:nth-child(1) {
+.starter .start-choice1 p:nth-child(1), .starter .start-choice2 p:nth-child(1), .starter .start-choice3 p:nth-child(1), .starter .dish-choice1 p:nth-child(1), .starter .dish-choice2 p:nth-child(1), .starter .dish-choice3 p:nth-child(1), .starter .desert-choice1 p:nth-child(1), .starter .desert-choice2 p:nth-child(1), .starter .desert-choice3 p:nth-child(1), .dishes .start-choice1 p:nth-child(1), .dishes .start-choice2 p:nth-child(1), .dishes .start-choice3 p:nth-child(1), .dishes .dish-choice1 p:nth-child(1), .dishes .dish-choice2 p:nth-child(1), .dishes .dish-choice3 p:nth-child(1), .dishes .desert-choice1 p:nth-child(1), .dishes .desert-choice2 p:nth-child(1), .dishes .desert-choice3 p:nth-child(1), .desert .start-choice1 p:nth-child(1), .desert .start-choice2 p:nth-child(1), .desert .start-choice3 p:nth-child(1), .desert .dish-choice1 p:nth-child(1), .desert .dish-choice2 p:nth-child(1), .desert .dish-choice3 p:nth-child(1), .desert .desert-choice1 p:nth-child(1), .desert .desert-choice2 p:nth-child(1), .desert .desert-choice3 p:nth-child(1) {
   grid-area: text1;
   font-weight: 500;
   font-size: 0.9em;
 }
-.starter .start-choice1 p:nth-child(2), .starter .start-choice2 p:nth-child(2), .starter .start-choice3 p:nth-child(2) {
+.starter .start-choice1 p:nth-child(2), .starter .start-choice2 p:nth-child(2), .starter .start-choice3 p:nth-child(2), .starter .dish-choice1 p:nth-child(2), .starter .dish-choice2 p:nth-child(2), .starter .dish-choice3 p:nth-child(2), .starter .desert-choice1 p:nth-child(2), .starter .desert-choice2 p:nth-child(2), .starter .desert-choice3 p:nth-child(2), .dishes .start-choice1 p:nth-child(2), .dishes .start-choice2 p:nth-child(2), .dishes .start-choice3 p:nth-child(2), .dishes .dish-choice1 p:nth-child(2), .dishes .dish-choice2 p:nth-child(2), .dishes .dish-choice3 p:nth-child(2), .dishes .desert-choice1 p:nth-child(2), .dishes .desert-choice2 p:nth-child(2), .dishes .desert-choice3 p:nth-child(2), .desert .start-choice1 p:nth-child(2), .desert .start-choice2 p:nth-child(2), .desert .start-choice3 p:nth-child(2), .desert .dish-choice1 p:nth-child(2), .desert .dish-choice2 p:nth-child(2), .desert .dish-choice3 p:nth-child(2), .desert .desert-choice1 p:nth-child(2), .desert .desert-choice2 p:nth-child(2), .desert .desert-choice3 p:nth-child(2) {
   grid-area: text2;
   font-weight: 300;
   font-size: 0.9em;
 }
-.starter .start-choice1 p:nth-child(3), .starter .start-choice2 p:nth-child(3), .starter .start-choice3 p:nth-child(3) {
+.starter .start-choice1 p:nth-child(3), .starter .start-choice2 p:nth-child(3), .starter .start-choice3 p:nth-child(3), .starter .dish-choice1 p:nth-child(3), .starter .dish-choice2 p:nth-child(3), .starter .dish-choice3 p:nth-child(3), .starter .desert-choice1 p:nth-child(3), .starter .desert-choice2 p:nth-child(3), .starter .desert-choice3 p:nth-child(3), .dishes .start-choice1 p:nth-child(3), .dishes .start-choice2 p:nth-child(3), .dishes .start-choice3 p:nth-child(3), .dishes .dish-choice1 p:nth-child(3), .dishes .dish-choice2 p:nth-child(3), .dishes .dish-choice3 p:nth-child(3), .dishes .desert-choice1 p:nth-child(3), .dishes .desert-choice2 p:nth-child(3), .dishes .desert-choice3 p:nth-child(3), .desert .start-choice1 p:nth-child(3), .desert .start-choice2 p:nth-child(3), .desert .start-choice3 p:nth-child(3), .desert .dish-choice1 p:nth-child(3), .desert .dish-choice2 p:nth-child(3), .desert .dish-choice3 p:nth-child(3), .desert .desert-choice1 p:nth-child(3), .desert .desert-choice2 p:nth-child(3), .desert .desert-choice3 p:nth-child(3) {
   grid-area: price;
   display: flex;
   justify-content: flex-end;
@@ -105,7 +105,7 @@ section {
   font-size: 0.9em;
 }
 
-.check1, .check2, .check3 {
+.check {
   transition: width 1s linear;
   width: 0;
   right: 0;
@@ -119,7 +119,7 @@ section {
   justify-content: center;
   align-items: center;
 }
-.check1 .check-circle1, .check1 .check-circle2, .check1 .check-circle3, .check2 .check-circle1, .check2 .check-circle2, .check2 .check-circle3, .check3 .check-circle1, .check3 .check-circle2, .check3 .check-circle3 {
+.check .check-circle {
   opacity: 0;
   z-index: 1;
 }
@@ -149,10 +149,6 @@ section {
   padding-bottom: 0.5em;
 }
 
-.dishes-title, .desert-title {
-  margin-top: 3em;
-}
-
 .starter {
   animation: starter-load 2s ease-in 300ms;
   animation-fill-mode: forwards;
@@ -174,53 +170,11 @@ section {
   opacity: 0;
 }
 
-.start1, .start2, .start3, .dish1, .dish2, .dish3, .desert1, .desert2, .desert3 {
-  background-color: white;
-  box-shadow: 0px 2px 5px #F2F2F2;
-  border-color: #F2F2F2;
-  width: 90%;
-  height: 80px;
-  margin-left: 1em;
-  padding-top: 0.1em;
-  border-radius: 1em;
-}
-
-.start2, .start3, .dish2, .dish3, .desert1, .desert2, .desert3 {
-  margin-top: 1em;
-}
-
-.starter1, .starter2, .starter3, .dishes1, .dishes2, .dishes3, .deserts1, .deserts2, .deserts3 {
-  color: black;
-  text-decoration: none;
-}
-
-.start1-title, .start2-title, .start3-title, .dish1-title, .dish2-title, .dish3-title, .desert1-title, .desert2-title, .desert3-title {
-  margin-left: 1em;
-}
-
-.start1-detail, .start2-detail, .start3-detail, .dish1-detail, .dish2-detail, .dish3-detail, .desert1-detail, .desert2-detail, .desert3-detail {
-  margin-left: 1em;
-  font-weight: 300;
-  font-size: 0.9em;
-  margin-top: -0.5em;
-}
-
-.start1-flex, .start2-flex, .start3-flex, .dish1-flex, .dish2-flex, .dish3-flex, .desert1-flex, .desert2-flex, .desert3-flex {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.start1-price, .start2-price, .start3-price, .dish1-price, .dish2-price, .dish3-price, .desert1-price, .desert2-price, .desert3-price {
-  font-size: 0.9em;
-  margin-top: -0.5em;
-  padding-right: 1em;
-}
-
 .order {
   position: absolute;
   left: 30%;
-  margin-top: 4em;
+  margin-top: 2em;
+  margin-bottom: 1em;
   border-radius: 3em;
   text-decoration-line: none;
   font-size: 0.75em;
@@ -233,7 +187,7 @@ section {
 /* Footer */
 footer {
   background-color: #353535;
-  margin-top: 75em;
+  margin-top: 76em;
   padding-top: 0.5em;
   margin-bottom: -1.5em;
   height: 200px;
