--- a/menu1/sass/style1.scss
+++ b/menu1/sass/style1.scss
@@ -60,6 +60,7 @@ section{
         box-shadow: 2px 3px 10px rgba(0,0,0,0.1);
         margin: 0em 1em 1.5em 1em;
         display: flex;
+        width: 90%;
     &:hover .check {
       width: 25%;
       > .check-circle {
@@ -80,8 +81,12 @@ section{
         "text1 ."
         "text2 price";
         p {
-            display: block;
+            display:block;
+            white-space: nowrap;
+            overflow:hidden;
+            text-overflow: ellipsis;
             &:nth-child(1) {
+                overflow:visible;
                 grid-area: text1;
                 font-weight: 500;
                 font-size: 0.9em;
