--- a/menu2/sass/style2.scss
+++ b/menu2/sass/style2.scss
@@ -21,7 +21,7 @@ body {
 .logo-img {
    margin-left: -5em;
 } 
-.menilmontant-img{
+.charonne-img{
     width: 102.2%;
     height: 200px;
     object-fit: cover;
