--- a/menu2/sass/style2.scss
+++ b/menu2/sass/style2.scss
@@ -5,21 +5,22 @@ body {
   }
   
   /* Header */
-.logo {
+  .logo {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     margin-top: 1em;
     margin-bottom: 1em;
-    margin-left: -3em;
   }
 .back{
     width: 15px;
     height: 15px;
-    margin-top: 0.5em;  
+    margin-top: 0.5em; 
+    margin-left: 1.5em; 
 }
 .logo-img {
-   margin-left: -5em;
+    display: block;
+    margin: auto;
 } 
 .charonne-img{
     width: 102.2%;
