--- a/menu3/sass/style3.scss
+++ b/menu3/sass/style3.scss
@@ -5,21 +5,22 @@ body {
   }
   
   /* Header */
-.logo {
+  .logo {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     margin-top: 1em;
     margin-bottom: 1em;
-    margin-left: -3em;
   }
 .back{
     width: 15px;
     height: 15px;
-    margin-top: 0.5em;  
+    margin-top: 0.5em; 
+    margin-left: 1.5em; 
 }
 .logo-img {
-   margin-left: -5em;
+    display: block;
+    margin: auto;
 } 
 .cite-rouge-img{
     width: 102.2%;
@@ -251,4 +252,101 @@ footer {
   .partner {
     margin-top: 2em;
   }
+  @media only screen and (min-width: 550px) and (max-width: 1400px) {
+    .cite-rouge-img{
+        width: 100.8%;
+    }
+        
+    .main-title{
+        display: unset;
+    }   
+    .back{
+        width: 25px;
+        height: 25px;
+    }
+    .title{
+        font-size: 2em;
+        text-align: center;
+    }
+    .heart{
+        display: block;
+        margin: auto;
+        width: 30px;
+        height: 30px;  
+    }
+    .starter, .dishes, .desert {
+        .starter-card1, .starter-card2, .starter-card3, .dish-card1, .dish-card2, .dish-card3, .desert-card1, .desert-card2, .desert-card3  {
+          &:hover .check {
+              width: 10%;
+            }
+        }
+    }    
+    .order {
+        position: relative;
+        left: 45%;
+        bottom: -4em;
+    }
+}
+
+@media only screen and (min-width: 550px) and (max-width: 1000px) {
+    .starter, .dishes, .desert {
+        margin-left: 1.5em;
+    }
+    
+    .ustensils-p, .partner-p, .legal, .contact-link {
+        align-items: center;
+    }
+    .ustensils, .partner {
+        left: 35%;
+    }
+    footer{
+        margin-top: 80em;
+    }
+}
+@media only screen and (min-width: 1001px) and (max-width: 1400px) {
+    .starter-title, .dishes-title, .desert-title {
+        font-size: 2em;
+        margin-left: 0.5em;
+    }
+    .starter-title, .desert-title{
+        padding-right: 25em;
+    }
+       
+    .dishes-title{
+        padding-right: 27em;  
+    }
+    .starter, .dishes, .desert {
+        .starter-card1, .starter-card2, .starter-card3, .dish-card1, .dish-card2, .dish-card3, .desert-card1, .desert-card2, .desert-card3  {
+              width: 30%;
+          &:hover .check {
+            width: 25%;
+          }
+        }
+    }  
+    .starter, .dishes, .desert {
+        display: flex;
+        flex-direction: row;
+        align-items:baseline;
+        flex-wrap: wrap;
+    }
+    footer{
+        margin-top: 60em;
+        padding-bottom: 4em;
+    }
+    footer .title {
+        font-size: 2em;
+    }
+    .ustensils-p, .partner-p, .legal, .contact-link {
+        align-items: center;
+        font-size: 1em;
+    }
+    .ustensils, .partner {
+        width: 20px;
+        height: 20px;
+        left: 40%;
+    }
+    .partner {
+        margin-top: 2em;
+    }
+}
 
