Changement suite à session de mentorat: - centrage texte spinner - remise de police sur balise input - animation pour .explorer & order - ajout remplissage coeur au survol de chaque menu - centrage localisation sur responsive - centrage restaurant sur responsive - retrait max width 1440px - ajout min width à partir de 2000 px, pour menu/padding - logo nouveau effectué en html et css vs image - réunion de tous les css des menus sous un seul et unique css

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -283,6 +283,7 @@ $backgroundhover: #f5edff;
     height: 20px;
     margin-top: 0.5em;
     padding-top: 0.25em;
+    padding-bottom: 0.25em;
   }
   
   .menilmontant-heart, .charonne-heart, .cite-rouge-heart, .folie-mericourt-heart {
