--- a/style.css
+++ b/style.css
@@ -312,6 +312,7 @@ section {
   height: 20px;
   margin-top: 0.5em;
   padding-top: 0.25em;
+  padding-bottom: 0.25em;
 }
 
 .menilmontant-heart, .charonne-heart, .cite-rouge-heart, .folie-mericourt-heart {
