--- a/style.css
+++ b/style.css
@@ -12,10 +12,19 @@
   height: 100%;
   left: 0;
   top: 0;
+  -webkit-animation: bye 3s linear;
   animation: bye 3s linear;
   opacity: 0;
 }
 
+@-webkit-keyframes bye {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 @keyframes bye {
   0% {
     opacity: 1;
@@ -34,6 +43,7 @@
   width: 300px;
   margin-left: -6em;
   margin-top: -6em;
+  -webkit-padding-before: 400%;
 }
 
 .loader {
@@ -41,7 +51,7 @@
   height: 50px;
   position: absolute;
   left: 50%;
-  top: 30%;
+  top: 35%;
   margin-left: -25px;
   /* Cette valeur doit être la moitié négative de la valeur du width */
   margin-top: -100px;
@@ -76,31 +86,31 @@
 }
 @-webkit-keyframes spin {
   0% {
-    -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
   100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-@keyframes spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
   }
 }
 .bloc-page {
+  -webkit-animation: bloc-load 3s ease-in 2s;
   animation: bloc-load 3s ease-in 2s;
+  -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
   transform: translateY(-20px);
   opacity: 0;
 }
 
+@-webkit-keyframes bloc-load {
+  0% {
+    transform: translateY(-20px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
 @keyframes bloc-load {
   0% {
     transform: translateY(-20px);
@@ -177,6 +187,7 @@ body {
   display: block;
   margin: auto;
   border-radius: 3em;
+  -webkit-text-decoration-line: none;
   text-decoration-line: none;
   font-size: 0.75em;
   color: white;
@@ -283,6 +294,7 @@ section {
   height: 200px;
   border-top-left-radius: 0.5em;
   border-top-right-radius: 0.5em;
+  -o-object-fit: cover;
   object-fit: cover;
 }
 
